--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.83.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -33,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.7.2"
   }
 }
