--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.5",
     "typescript": "^5.7.2"
   }
